Fix cutoff issues for small viewports.

--- a/src/style.scss
+++ b/src/style.scss
@@ -986,7 +986,7 @@ input.input:read-only {
 
 
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 768px) {
   .row-responsive{flex-flow:wrap;}
   .footer-row{flex-flow:wrap-reverse;width:auto;}
   .footer-menu{flex-flow:wrap;}
